[package]
name = "tapstr"
version = "0.1.0"
edition = "2021"

[lib]
name = "tapstr"
path = "src/lib.rs"

[dependencies]
bitcoin = { version = "0.31", features = ["rand", "serde"] }
bitcoin_hashes = "0.13"
nostr = "0.27"
secp256k1 = { version = "0.28", features = ["global-context", "rand", "recovery"] }
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
rand = "0.8"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
